after switch-branch.sh